# mmdevicetests

./: .editorconfig  .gitignore  LICENSE.txt  MANIFEST.in  README.md  mmdevice.i  setup.cfg  setup.py  tox.ini
mmdevicetests/: .gitignore  fakecore.py  mmdevice.i  module_interface.py
mmdevicetests/devicetests/: module_interface_test.py
pymmdevice/: mmdevice.i  module_interface.py
tests/: README.md  test_democamera.py  test_fakecore.py  test_swig_wrappers.py
